# 10x12chess

./: .gitignore  10x12chess.c  CMakeLists.txt  Makefile  README.md  a.out  boroblema.txt  cervello.h  grafica.h  mosse.h  note.md  pezzi.h  roba.py  sas.py  scacchiera.h  test.h  valgrindtest.sh  valutazione.h
include/: cervello.h  cli.h  mosse.h  scacchiera.h  test.h  uci.h
src/: 10x12chess.c  cervello.c  cervello.h  cli.c  grafica.c  grafica.h  mosse.c  mosse.h  pezzi.c  pezzi.h  scacchiera.c  scacchiera.h  test.c  test.h  uci.c  valutazione.c  valutazione.h
